--- a/ProyectoPooDist/src/ControlPlanilla/FramePlanillaSemanal.form
+++ b/ProyectoPooDist/src/ControlPlanilla/FramePlanillaSemanal.form
@@ -73,7 +73,7 @@
                       <Group type="102" attributes="0">
                           <Component id="jTextField19" min="-2" pref="433" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="buscarPiloto" min="-2" pref="279" max="-2" attributes="0"/>
+                          <Component id="txtReactivarTrabajadorEliminado" min="-2" pref="279" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
@@ -87,7 +87,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jTextField19" min="-2" max="-2" attributes="0"/>
-                      <Component id="buscarPiloto" min="-2" pref="28" max="-2" attributes="0"/>
+                      <Component id="txtReactivarTrabajadorEliminado" min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -1330,7 +1330,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="buscarPiloto">
+        <Component class="javax.swing.JButton" name="txtReactivarTrabajadorEliminado">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="99" green="99" red="0" type="rgb"/>
@@ -1347,7 +1347,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buscarPilotoActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtReactivarTrabajadorEliminadoActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
