--- a/ProyectoPooDist/src/GestionDePilotos/AGREGARGESTIONPILOTOS.form
+++ b/ProyectoPooDist/src/GestionDePilotos/AGREGARGESTIONPILOTOS.form
@@ -330,11 +330,12 @@
                   <Font name="Nirmala UI" size="12" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
+                  <StringArray count="5">
                     <StringItem index="0" value="ACTIVO"/>
                     <StringItem index="1" value="ENFERMO"/>
                     <StringItem index="2" value="EN VACACIONES"/>
                     <StringItem index="3" value="JUBILADO"/>
+                    <StringItem index="4" value="BLOQUEADO"/>
                   </StringArray>
                 </Property>
               </Properties>
