OPTIMIZACION DE DISEÑO E INTERFACES NO.13

--- a/ProyectoPooDist/src/GestionDeCamiones/GARAGEGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/GARAGEGESTIONCAMIONES.form
@@ -211,14 +211,16 @@
                               <Component id="eliminarCamion1" min="-2" pref="28" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="agregarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="actualizarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="eliminarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                   <Component id="txtMarcaCamionBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="agregarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="actualizarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="eliminarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
