ACTUALIZACION DE EXCELES

--- a/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
@@ -181,7 +181,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="MARCA"/>
+                    <Property name="text" type="java.lang.String" value="CAMION"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtMarcaCamionBuscar">
