--- a/ProyectoPooDist/src/GestionDePilotos/INICIOGESTIONPILOTOS.form
+++ b/ProyectoPooDist/src/GestionDePilotos/INICIOGESTIONPILOTOS.form
@@ -56,8 +56,8 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel4" min="-2" pref="63" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtNombrePilotoBuscar" min="-2" pref="234" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="220" max="-2" attributes="0"/>
+                              <Component id="txtNombrePilotoBuscar" min="-2" pref="285" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="169" max="-2" attributes="0"/>
                               <Component id="buscarPiloto" min="-2" pref="95" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="refrescarPiloto" min="-2" pref="95" max="-2" attributes="0"/>
@@ -160,7 +160,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Nirmala UI" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="NOMBRE"/>
+            <Property name="text" type="java.lang.String" value="PILOTO"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="editarPiloto">
