--- a/ProyectoPooDist/src/GestionDePilotos/PILOTOSINACTIVOS.form
+++ b/ProyectoPooDist/src/GestionDePilotos/PILOTOSINACTIVOS.form
@@ -55,7 +55,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel4" min="-2" pref="63" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="txtNombrePilotoBuscar" min="-2" pref="234" max="-2" attributes="0"/>
+                          <Component id="txtNombrePilotoBuscar" min="-2" pref="285" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="buscarPiloto" min="-2" pref="95" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -87,10 +87,10 @@
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane4" min="-2" pref="545" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jScrollPane4" min="-2" pref="613" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
-              <Component id="jPanel7" alignment="0" pref="663" max="32767" attributes="0"/>
+              <Component id="jPanel7" alignment="0" pref="725" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -121,7 +121,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Nirmala UI" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="NOMBRE"/>
+            <Property name="text" type="java.lang.String" value="PILOTO"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtNombrePilotoBuscar">
@@ -130,6 +130,9 @@
               <Font name="Nirmala UI" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNombrePilotoBuscarActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane4">
           <AuxValues>
